--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@dorian-eydoux/pronote-api": "^2.3.4",
     "discord.js": "^13.2.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "ms": "^2.1.3"
   },
   "devDependencies": {
     "eslint": "^8.1.0"
