--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "pronote-notifier",
   "description": "Notify Pronote changes using a Discord webhook",
   "main": "index.js",
+  "scripts": {
+    "start": "node .",
+    "lint": "eslint .",
+    "test": "node test"
+  },
   "keywords": [
     "discord",
     "notifier",
