--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,5 @@
 root = true
+
 [*]
 indent_style = space
 indent_size = 4
@@ -6,3 +7,6 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.yml]
+indent_size = 2
